Fixed shadowjar